Bug Finally Fixed after a whole fucking day

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,4 +23,6 @@
     </uses-permission>
     <uses-permission android:name="android.permission.RECEIVE_SMS">
     </uses-permission>
+    <uses-permission android:name="android.permission.READ_SMS">
+    </uses-permission>
 </manifest>
