--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,7 +31,8 @@
             android:theme="@style/AppTheme.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="co.ir.ts.app.sms.smsumad" >
+                </action>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
